fix hero video play and text size on mobile view

--- a/css/templatemo-nomad-force.css
+++ b/css/templatemo-nomad-force.css
@@ -651,7 +651,7 @@ strong {
 
 @media screen and (max-width: 991px) {
   h1 {
-    font-size: 48px;
+    font-size: 35px;
   }
 
   h2 {
@@ -672,6 +672,10 @@ strong {
 
   h6 {
     font-size: 18px;
+  }
+
+  .heroText p {
+    font-size: 16px;
   }
 
   .navbar {
@@ -707,11 +711,11 @@ strong {
 
 @media screen and (max-width: 360px) {
   h1 {
-    font-size: 32px;
+    font-size: 28px;
   }
 
   .heroText p {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 
